[gd_scene format=3 uid="uid://cymu4527qeg0j"]

[ext_resource type="Script" path="res://ui/components/AfkRewardsPopup.gd" id="1_script"]

[node name="AfkRewardsPopup" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -160.0
offset_right = 180.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
visible = false
script = ExtResource("1_script")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Welcome Back!"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "You were away for 0m 0s"
horizontal_alignment = 1

[node name="KillsLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Monsters slain: 0"
horizontal_alignment = 1

[node name="XPLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "XP earned: 0"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Gold earned: 0"
horizontal_alignment = 1

[node name="LootLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "No items found"
horizontal_alignment = 1

[node name="ClaimBtn" type="Button" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Claim Rewards"
